Fix select input overflow bug on hover

--- a/components/Input/SearchMultiSelectInput/styles.scss
+++ b/components/Input/SearchMultiSelectInput/styles.scss
@@ -56,7 +56,7 @@
                 .input-and-actions {
                     &:hover {
                         .input {
-                            width: calc(100% - var(--width-dropdown-button) + var(--width-clear-button) + var(--spacing-extra-small));
+                            width: calc(100% - (var(--width-dropdown-button) + var(--width-clear-button) + var(--spacing-extra-small)));
                         }
 
                         .actions {
@@ -75,7 +75,7 @@
                 .input-and-actions {
                     &:hover {
                         .input {
-                            width: calc(100% - var(--width-dropdown-button) + var(--width-select-all-button) + var(--spacing-extra-small));
+                            width: calc(100% - (var(--width-dropdown-button) + var(--width-select-all-button) + var(--spacing-extra-small)));
                         }
 
                         .actions {
